--- a/package.json
+++ b/package.json
@@ -10,17 +10,22 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "^2.4.6",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.31",
-    "postcss-load-config": "^4.0.1",
-    "svelte": "^4.2.2",
-    "svelte-preprocess": "^5.0.4",
-    "tailwindcss": "^3.3.5",
-    "vite": "^4.5.0",
-    "workbox-cli": "^7.0.0"
+    "@sveltejs/vite-plugin-svelte": "^3.1.1",
+    "@types/leaflet": "^1.9.14",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
+    "postcss-load-config": "^6.0.1",
+    "svelte": "^4.2.18",
+    "svelte-preprocess": "^6.0.3",
+    "tailwindcss": "^3.4.15",
+    "vite": "^5.3.5",
+    "workbox-cli": "^7.3.0"
   },
   "dependencies": {
-    "leaflet": "^1.9.4"
+    "@jridgewell/sourcemap-codec": "^1.5.0",
+    "got": "^14.4.5",
+    "leaflet": "^1.9.4",
+    "remove": "^0.1.5",
+    "update-notifier": "^7.3.1"
   }
 }
